; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/greybus/extr_hid.c_gb_hid_set_power.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/greybus/extr_hid.c_gb_hid_set_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gb_hid = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gb_hid*, i32)* @gb_hid_set_power to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gb_hid_set_power(%struct.gb_hid* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.gb_hid*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.gb_hid* %0, %struct.gb_hid** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.gb_hid*, %struct.gb_hid** %4, align 8
  %8 = getelementptr inbounds %struct.gb_hid, %struct.gb_hid* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @gb_pm_runtime_get_sync(i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  store i32 %14, i32* %3, align 4
  br label %26

15:                                               ; preds = %2
  %16 = load %struct.gb_hid*, %struct.gb_hid** %4, align 8
  %17 = getelementptr inbounds %struct.gb_hid, %struct.gb_hid* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @gb_operation_sync(i32 %18, i32 %19, i32* null, i32 0, i32* null, i32 0)
  store i32 %20, i32* %6, align 4
  %21 = load %struct.gb_hid*, %struct.gb_hid** %4, align 8
  %22 = getelementptr inbounds %struct.gb_hid, %struct.gb_hid* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @gb_pm_runtime_put_autosuspend(i32 %23)
  %25 = load i32, i32* %6, align 4
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %15, %13
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @gb_pm_runtime_get_sync(i32) #1

declare dso_local i32 @gb_operation_sync(i32, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @gb_pm_runtime_put_autosuspend(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
